<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardV_itemProduto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagem_carrinho"
            android:layout_width="@dimen/width_50"
            android:layout_height="@dimen/height_50"
            android:contentDescription="@string/descircao_carrinho"
            android:src="@drawable/carrinho"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_quantidadeCadastrada"
            android:layout_margin="@dimen/margin_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            app:layout_constraintBottom_toBottomOf="@+id/imagem_carrinho"
            app:layout_constraintEnd_toStartOf="@+id/text_listaProdutosCadastrados"
            app:layout_constraintStart_toEndOf="@+id/imagem_carrinho"
            app:layout_constraintTop_toTopOf="@+id/imagem_carrinho" />

        <TextView
            android:id="@+id/text_listaProdutosCadastrados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/nome_do_produto_cadastrado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imagem_carrinho" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>