<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".produto.detalhe.DetalheProdutoFragment">

    <ImageView
        android:id="@+id/imagem_carrinho"
        android:layout_width="@dimen/width_80"
        android:layout_height="@dimen/heigth_80"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/carrinho"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nomeProduto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/nome_do_produto"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imagem_carrinho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagem_carrinho"
        app:layout_constraintTop_toTopOf="@+id/imagem_carrinho"
        app:layout_constraintVertical_bias="0.442" />

    <TextView
        android:id="@+id/text_quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:layout_marginTop="44dp"
        android:text="@string/quantidade"
        android:textSize="@dimen/size_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagem_carrinho"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/text_valorUnitario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/valor_unitario_do_produto"
        android:textSize="@dimen/size_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quantidade"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/text_receita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/receita"
        android:textSize="@dimen/size_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_valorUnitario"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:layout_width="@dimen/width_40"
        android:layout_margin="@dimen/margin_16"
        android:layout_height="@dimen/height_40dç"
        android:src="@drawable/ic_favoritar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_receita"
        app:layout_constraintVertical_bias="0.501" />


</androidx.constraintlayout.widget.ConstraintLayout>